Fixed booking form not showing amount to transfer

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -1741,7 +1741,7 @@ hr {
 }
 .modal {
   width: 400px !important;
-  height: 220px;
+  height: 255px;
   display:block;
   margin: 0 auto;
   position:relative;
@@ -2309,7 +2309,7 @@ hr {
   }
   .modal {
     width: 360px !important;
-    height: 220px;
+    height: 270px;
   }
   .head h1 {
     margin-top: 5px !important;
@@ -2498,6 +2498,9 @@ hr {
   }
   .parallax.contact h1 {
     padding-top: 20vh;
+  }
+  .modal-wrapper {
+    padding-right: 0px !important;
   }
 } 
 @media only screen and (max-width: 300px) {
